[package]
name = "veritasdb"
version = "0.1.0"
authors = ["webb.shi <bradyjoestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merklebtree = "0.1.0"
ring = "0.16.9"
hex = "0.4.0"
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1.0.41"
rocksdb = "0.12.3"